<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_list_products">

    <fragment
        android:id="@+id/navigation_list_products"
        android:name="com.example.adv1.fragments.ListProductsFragment"
        android:label="@string/list_products"
        tools:layout="@layout/fragment_list_products" />
    <fragment
        android:id="@+id/navigation_add_product"
        android:name="com.example.adv1.fragments.AddProductFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_add_product" />
    <fragment
        android:id="@+id/navigation_order_requests"
        android:name="com.example.adv1.fragments.OrderRequestsFragment"
        android:label="@string/order_requests"
        tools:layout="@layout/fragment_order_requests" />
</navigation>